refactor: simplify MatchService with @RequiredArgsConstructor and method extraction
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>